# bumahhfiles

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  rust-toolchain.toml
.github/workflows/: build_test.yml
src/: gc.rs  main.rs  routes.rs  state.rs  template.rs  utils.rs
templates/: index.html  url_list.html  url_list_raw.html
