[package]
name = "bumahhfiles"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.16.0"
axum = { version = "0.8.9", features = ["multipart"] }
lazy_static = "1.5.0"
mime_guess = "2.0.5"
rand = "0.10.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tower = "0.5.3"
tower-http = { version = "0.6.10", features = ["trace", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
